--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <h1>You're Going to Hire Me.</h1>
 
-            <p>Hello, my name is [INSERT NAME] I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
+            <p>Hello, my name is Beth Eddy I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
 
             <a href="#aboutme" class="btn">Learn More About Me</a>
 
