--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
     <meta charset="UTF-8">
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial scale=1/>
+
+
 
     <title>Code Louisville Student Portfolio</title>
 
@@ -68,7 +70,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="img/Beth Eddy.png" alt="Profile Photo Beth Eddy" class="aboutme-photo">
 
             <h2>About Me</h2>
 
@@ -96,7 +98,7 @@
 
                 <h3>Project 2</h3>
 
-                <p>Where is it? i saw that bird i need to bring it home to mommy squirrel! hiss at vacuum cleaner and catch mouse and gave it as a present or is good you understand your place in my world so nyan nyan goes the cat. </p>
+                <p>Where is it? i saw that bird i need to bring it home to mom squirrel! hiss at vacuum cleaner and catch mouse and gave it as a gift or is good you understand your place in my world so nyan nyan goes the cat. </p>
 
                 <p><a href="#" class="btn">View on GitHub &raquo;</a></p>
 
@@ -106,21 +108,30 @@
 
                 <h3>Project 3</h3>
 
-                <p>Little yarn mouse, bare fangs at toy run hide in litter box until treats are fed sit and stare or russian blue but sleep on dog bed, force dog to sleep on floor. Pet my belly, you know you want to; seize the hand and shred it! with tail in the air. </p>
+                <p>Little yarn mouse, bare fangs runs and hides in litter box until treats are fed sit and stare or russian blue but sleep on dog bed, force dog to sleep on floor. Pet my belly, you know you want to; seize the hand and shred it! with tail in the air. </p>
 
                 <p><a href="#" class="btn">View on GitHub &raquo;</a></p>
 
             </article>
 
         </main>
-    
+        
     </section>
 
+    <section class="contact-container" id="contact">
+        <div class="contact-content">
+            <h3> Contact</h3>
+
+            <p>beth.eddy13@gmail.com</p>
+
+        </div>
+
+    </section>
     <section class="footer-container">
 
         <footer class="footer-content">
 
-            <p>&copy; 2022 Code Louisville. This website maintained by: [YOUR NAME HERE]</p> 
+            <p>&copy; 2024 Code Louisville. This website maintained by: Beth Eddy</p> 
 
         </footer>
 
